# LocalAIAssistant

./: .clangd  .env.example  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README_EN.md
cmake/: Info.plist.in  config.example.json
docs/: ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md
docs/superpowers/plans/: 2026-04-25-ai-model-params.md  2026-04-26-file-upload.md  2026-04-26-gui-file-upload.md  2026-05-01-ai-girlfriend-module.md  2026-05-03-super-realistic-tts-upgrade.md
docs/superpowers/specs/: 2026-04-25-ai-model-params-design.md  2026-04-26-file-upload-design.md  2026-04-26-gui-file-upload-design.md  2026-05-01-ai-girlfriend-module-design.md
resources/en.lproj/: InfoPlist.strings
resources/icons/: app.icns  app.rc
resources/zh_CN.lproj/: InfoPlist.strings
scripts/: build.bat  build.ps1  build.sh  demo.bat  demo.ps1  demo.sh  install.bat  install.ps1  install.sh  setup.sh
src/cli/: cli_application.cpp  cli_application.h  cli_main.cpp
src/core/: datamodels.h  filemanager.cpp  filemanager.h  networkmanager.cpp  networkmanager.h  sessionmanager.cpp  sessionmanager.h  soul.md
src/girlfriend/: avatarwidget.cpp  avatarwidget.h  girlfriend_translations.h  girlfriendsession.cpp  girlfriendsession.h  girlfriendwindow.cpp  girlfriendwindow.h  memory.md  memorymanager.cpp  memorymanager.h  personality.md  personalityengine.cpp  personalityengine.h  voicemanager.cpp  voicemanager.h
src/ui/: main.cpp  mainwindow.cpp  mainwindow.h  markdownrenderer.cpp  markdownrenderer.h  settingsdialog.cpp  settingsdialog.h  stylesheetmanager.cpp  stylesheetmanager.h  translationmanager.cpp  translationmanager.h
test/: test_cli.md
translations/: localai_en.ts  localai_zh_CN.ts
